tests/pact/bad/bad-modrefs-empty.repl
(module bad-modrefs G
  (defcap G () true)
  (defun modref-types
    ( ref:module{} )
    "test modref with empty list"
    1)
)
